Member Register Api Fix
- phone Data Add
- 500 Error Response Add
- 200 Response Example Value Add
- 422 Response Example Value Add
